# ENGS109_Final_Project

./: .gitignore  README.md  Unmixing_the_Music.ipynb  pyproject.toml  requirements.txt
audio_examples/: README.md
audio_examples/curated/: INDEX.txt
experiments/dictionaries/: ksvd.npz  nmf.npz
experiments/results/: ablation_ksvd.csv  ablation_nmf.csv  ablation_rpca.csv  extended_per_track.csv  extended_summary.json  fusion.json  main_results.csv  main_summary.json  masktype.json  metrics_per_track.csv  stereo_mmv.json  summary.json
experiments/sparsenet/: history.npy  model_ctx_history.npy
figures/: make_all_figures.py  make_extended_figures.py
paper/: icml2025.sty  icml_style.sty  paper.tex  references.bib
poster/: poster.tex  poster.tex.bak
proposal/: plan.tex  proposal.tex
scripts/: build_notebook.py  eval_model.py  evaluate_all.py  make_audio_examples.py  package_submission.py  run_ablations.py  run_experiments.py  run_extended.py  run_stage_a.py  train_dictionaries.py  train_sparsenet.py
src/separation/: __init__.py  baselines.py  features.py  io.py  metrics.py  stage_a_rpca.py  stage_b_nmf.py  stage_c_ksvd.py  stage_d_scn.py  stage_e_mmv.py
tests/: test_solvers.py
walkthrough/: walkthrough.tex
