[project]
name = "engs109-music-separation"
version = "0.1.0"
description = "Sparse, Low-Rank, and Deep: a compressed-sensing toolkit for music source separation (ENGS 109 final project)"
authors = [{ name = "Taka Khoo" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "scikit-learn>=1.4",
    "librosa>=0.10",
    "soundfile>=0.12",
    "torch>=2.2",
    "musdb>=0.4",
    "museval>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
